feat: Implement initial version of Pro Darts Scorer web application
- Added index.php for rendering the main application interface with setup, game, stats, match history, and summary screens.
- Developed app.js to handle game logic, player management, and UI updates.
- Integrated sound effects for game actions and player interactions.
- Created recommendations.txt for sound file sourcing and usage.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-# Ignore the data directory
-data/
+# Ignore the contents of the data directory...
+data/*.json
+# ...but not the .htaccess file inside it.
+!data/.htaccess
 
-# Ignore Python virtual environment
-venv/
+# Ignore Composer dependencies
+# Ignore environment files
+.env
