--- a/.htaccess
+++ b/.htaccess
@@ -5,11 +5,10 @@
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
-    # Handle requests for files that exist in the public directory (e.g., CSS, JS).
-    RewriteCond %{REQUEST_URI} !^/public/
-    RewriteCond %{DOCUMENT_ROOT}/public%{REQUEST_URI} -f
-    RewriteRule ^(.*)$ public/$1 [L]
-
-    # Route all other requests to the main index.php front controller.
+    # If the request is not for an existing file or directory,
+    # route it to the front controller in the public directory.
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ public/index.php [L,QSA]
+
 </IfModule>
