--- a/.htaccess
+++ b/.htaccess
@@ -5,10 +5,8 @@
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
-    # If the request is not for an existing file or directory,
-    # route it to the front controller in the public directory.
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ public/index.php [L,QSA]
+    # Route all requests through the public folder's index.php,
+    # unless the file or directory actually exists.
+    RewriteRule ^((?!public/).*)$ public/$1 [L,NC]
 
 </IfModule>
